# irit-sm_V11

./: INSTALL_readme.1st  Makefile.am  README.md  irit.def  irit.imd  irit64.def  iritD.def  iritD64.def  makefile.ami  makefile.and  makefile.gnux  makefile.os2  makefile.sas  makefile.wce  makefile.wnt  makeflag.ami  makeflag.and  makeflag.cygwin  makeflag.gnux  makeflag.os2  makeflag.sas  makeflag.wce  makeflag.wnt  makeflag.wnt_vc6  makeflag.wnt_vc7  makeflag.wnt_vc8  makeflag.wnt_vc9
aisoshad/: aisoshad.c  izebra.c  lineshad.c  zbufcrvs.c
bool_lib/: adjacncy.c  bool-2d.c  bool-hi.c  bool1low.c  bool2low.c  bool_err.c  bool_loc.h  makefile.and
cagd_lib/: bez_clip.c  bsp2poly.c  bsp_gen.c  bsp_knot.c  bzr2poly.c  bzr_intr.c  cagd1gen.c  cagd2gen.c  cagd2pl2.c  cagd2ply.c  cagd_arc.c  cagd_aux.c  cagd_cci.c  cagd_cnc.c  cagd_dbg.c  cagd_err.c  cagd_loc.h  cagdbbox.c  cagdbsum.c  cagdcmrg.c  cagdextr.c  cagdmesh.c  cagdprim.c  cagdsrev.c  cagdswep.c  cbsp_aux.c  cbsp_fit.c  cbsp_int.c  cbspeval.c  cbzr_aux.c  cbzreval.c  crvmatch.c  hermite.c  makefile.and  poly_err.c  sbsp_aux.c  sbsp_int.c  sbspeval.c  sbzr_aux.c  sbzreval.c
circlink/: circlink.c
config/: configure.in
docs/: irit.src  (+7 more)
triv_lib/: Makefile.am  compost3.c  geomat4d.c  makefile.ami  makefile.and  makefile.os2  makefile.sas  makefile.unx  makefile.wce  makefile.wnt  mrch_run.c  mrchcube.c  mrchtriv.c  trinterp.c  triv_aux.c  triv_der.c  triv_err.c  triv_ffd.c  triv_gen.c  triv_iga.c  triv_iga2.c  triv_iga_xml.c  triv_loc.h  triv_loc_iga.h  triveval.c  trivextr.c  trivmrph.c  trivprim.c  trivtrev.c
(+953 files in other folders)
