INCLUDES = -I$(top_srcdir)/$(IRIT_INC_DIR)
lib_LTLIBRARIES = libIritTriv.la
libIritTriv_la_SOURCES = \
	compost3.c geomat4d.c  mrch_run.c  trinterp.c	\
	trivcmpt.c  trivcurv.c  triv_der.c	\
	triv_err.c  trivextr.c  triv_gen.c	\
	trivmrph.c  triv_ref.c  trivstrv.c	\
	mrchcube.c  mrchtriv.c  triv_aux.c	\
	trivcoer.c  triv_dbg.c  trivedit.c	\
	triveval.c  triv_ftl.c  trivmesh.c	\
	trivrais.c  trivruld.c  triv_sub.c \
	trivtrev.c triv_iga.c triv_iga2.c triv_iga_xml.c triv_ffd.c \
	trivprim.c

libIritTriv_la_LDFLAGS = -version-info 0:0:0

EXTRA_DIST = triv_loc.h
